--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title><%= name %> | <%= owner %></title>
         <link rel="stylesheet" type="text/css" href="/index.css">
-        <script type="text/javascript" src="/jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="/lib/jquery-3.3.1.min.js"></script>
     </head>
     <body>
         <div class="cdn--center">
