Added status field

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,7 @@
                     <label for="pass">Password</label>
                 </div>
                 <center>
+                    <p id="status" class="cdn--status"></p>
                     <button id="submit" class="cdn--sub--btn">Submit</button>
                 </center>
             </form>
