--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
         </div>
         <div class="cdn--bottom">
             <p>
-                Copyright &copy; <a href="<%= web %>"><%= name %></a>
+                Copyright &copy; <a href="<%= web %>"><%= owner %></a>
             </p>
         </div>
         <script type="text/javascript" src="/index.js"></script>
