changed button style

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
                 </div>
                 <center>
                     <p id="status" class="cdn--status"></p>
-                    <button id="submit" class="cdn--sub--btn">Submit</button>
+                    <a href="#" id="submit" class="cdn--sub--btn">Submit</a>
                 </center>
             </form>
         </div>
